# banalities-game

./: Cargo.toml
src/: game.rs  main.rs
