[package]
name = "banalities-backend"
version = "0.1.0"
edition = "2021"
authors = ["Mishmish <mishmish@mishmish.dev>"]

[dependencies]
indexmap = "1.9.2"
poem = { version = "1.3.55", features = ["cookie", "static-files", "websocket"] }
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread"]}
uuid = { version = "1.3.0", features = ["v4"] }
